# tin-tin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake_ctest.yml
REAPER/TIN_TIN/: TIN_TIN.RPP  TIN_TIN.RPP-bak
TinTinReaper/: TinTinReaper.RPP
TinTinReaper/TinTinReaper/: TinTinReaper.RPP
TinTinReaper/TinTinReaper/Untitled/: Untitled.RPP
benchmarks/: Benchmarks.cpp
dev-playground/: dev-playground.bwproject
dev-playground/auto-backups/dev-playground/: dev-playground [2024-06-19 100433].bwproject  dev-playground [2024-06-19 100533].bwproject  dev-playground [2024-06-19 101726].bwproject  dev-playground [2024-06-19 101731].bwproject  dev-playground [2024-06-19 101805].bwproject  dev-playground [2024-06-19 102133].bwproject  dev-playground [2024-06-19 102136].bwproject  dev-playground [2024-06-19 112328].bwproject  dev-playground [2024-06-22 124154].bwproject  dev-playground [2024-06-23 204501].bwproject  dev-playground [2024-06-23 214019].bwproject  dev-playground [2024-07-06 183328].bwproject  dev-playground [2024-07-06 184032].bwproject  dev-playground [2024-07-06 185434].bwproject
modules/melatonin_inspector/: README.md
modules/melatonin_inspector/melatonin/: inspector_component.h  lookandfeel.h
modules/melatonin_inspector/melatonin/components/: box_model.h  color_picker.h  component_tree_view_item.h  tree_component.h
source/: CMakeLists.txt  NoteLogger.h  WammyHelpers.h
source/buffers/: FIFO.h
source/containers/: TinTinContainers.h  Traid.h
source/processors/: PluginProcessor.cpp  PluginProcessor.h  TinTinProcessor.cpp  TinTinProcessor.h
source/ui/: TinTInNoteDisplayComponent.h  TinTinComponents.h  TinTinEditor.cpp  TinTinEditor.h  TinTinOctaveComponent.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
